--- a/css/grid-style.css
+++ b/css/grid-style.css
@@ -5,6 +5,9 @@
 .dynamic-grid.angular-grid {
     display: block;
 }
+.grid-container {
+    background: #f7f7f7;
+}
 .grid {
     border: 1px solid #cccccc;
     position: absolute;
@@ -76,9 +79,11 @@
     transition: all 0.5s;
 }
 .grid-img-wrap:after {
-    content:'\A';
-    width:100%; height:100%;
-    top:0; left:0;
+    content: '\A';
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
     background:rgba(0,0,0,0.5);
 }
 .grid-author {
